# phi-monster.github.io

./: .gitignore  CNAME  DEPLOY.md  FUNDING.md  README.md  astro.config.mjs  flake.nix  llms.txt  package-lock.json  package.json  site.cabal  site.hs
.github/workflows/: deploy.yml
content/: index.md
content/people/: muchen.md  yuchen.md
css/: style.css
internal_doc/: resources.md
public/: CNAME
src/components/: FighterCard.astro  FighterSprite.astro  HeroVS.astro  Marquee.astro  StatusBar.astro
src/data/: sprites.ts
src/game/: TitleScene.ts  boot.ts  palette.ts
src/layouts/: Base.astro
src/pages/: index.astro
src/styles/: global.css
templates/: default.html  fighters.html
